# opsiconfd

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  README.md  create_source.sh  opsi-dev-tool.yml  opsiconfd  opsiconfd-guard  opsiconfd.py  pyinstaller-build.py  pyinstaller-build.sh  pyproject.toml  requirements-qa.txt  requirements.txt  run-opsiconfd  run_qa.sh  setup.cfg  setup.py  tests.py
.devcontainer/: devcontainer.json  initialize.sh  post_create.sh  post_start.sh
addons/webgui/: __init__.py  clients.py  const.py  depots.py  hosts.py  products.py  utils.py  webgui.py
data/shared/: index.html
debian/: changelog  conffiles  config  control  copyright  dirs  opsiconfd-python2.4.init  opsiconfd-python2.4.logrotate  opsiconfd-python2.4.postinst  opsiconfd-python2.4.postrm  opsiconfd.config  opsiconfd.init  opsiconfd.logrotate  opsiconfd.postinst  opsiconfd.postrm  opsiconfd.preinst  opsiconfd.prerm  opsiconfd.service  opsiconfd.templates  rules
debian/source/: lintian-overrides
docker/: Dockerfile.dev  Dockerfile.opsiconfd41  Dockerfile.opsiconfd42  Dockerfile.webdav  build_and_run.py  compare41-docker-compose.yml  dev-docker-compose.yml  dev-opsiconfd-compose.yml  devenv.sh  load-balance-docker-compose.yml  opsiconfd-compose.yml  opsiconfd-dev-Dockerfile  opsiconfd41-Dockerfile  webdav-docker-compose.yml
docker/files/: configserver-dev-entrypoint.sh  docker-entrypoint.sh  opsi-schema.sql  opsiconfd-dev-entrypoint.sh  setup-grafana.sh  setup-mysql.sh  setup.sh
docker/opsiconfd-dev/: .env  Dockerfile  common.env  docker-compose.yml  opsiserver43-cs.env  opsiserver43-dev.env  opsiserver44-cs.env  opsiserver44-dev.env
files/: index.html  opsiconfd.conf  opsiconfd.pem
opsiconfd/: __init__.py  __main__.py  arbiter.py  backend.py  backup.py  check.py  config.py  dhcpd.py  diagnostic.py  doc.py  exception.py  grafana.py  info.py  letsencrypt.py  logging.py  main.py  manager.py  metrics.py  monitoring.py  omb.py  opsiconfd.py  opsisupervisor.py  patch.py  redis.py  resources.py  rest.py  server.py  session.py  setup.py  ssl.py  statistics.py  thread.py  utils.py  websocket.py  worker.py  workers.py  wsgi.py  zeroconf.py
opsiconfd/addon/: __init__.py  addon.py  manager.py
opsiconfd/application/: __init__.py  admininterface.py  auth.py  filetransfer.py  jsonrpc.py  jsonrpcinterface.py  login.py  main.py  memoryprofiler.py  messagebroker.py  metrics.py  middleware.py  monitoring.py  proxy.py  redisinterface.py  session.py  status.py  terminal.py  utils.py  webdav.py
opsiconfd/auth/: __init__.py  _pam.py  ldap.py  pam.py  rights.py  role.py  saml.py  user.py
opsiconfd/backend/: __init__.py  auth.py  interface.py  mysql.py
opsiconfd/check/: __init__.py  addon.py  backend.py  backup.py  backup.py.orig  cache.py  cli.py  cli.py.orig  common.py  config.py  const.py  jsonrpc.py  ldap.py  main.py  mysql.py  opsilicense.py  opsipackages.py  redis.py  register.py  registry.py  ssl.py  ssl.py.orig  system.py  system.py.orig  users.py  utils.py
opsiconfd/main/: __init__.py  backup.py  config.py  diagnostic.py  get_config.py  log_viewer.py  opsiconfd.py  setup.py  test.py
opsiconfd/messagebus/: __init__.py  file_transfer.py  filetransfer.py  process.py  redis.py  terminal.py  types.py  websocket.py
opsiconfd/metrics/: __init__.py  collector.py  registry.py  statistics.py
opsiconfd/setup/: __init__.py  backend.py  configs.py  files.py  samba.py  sudo.py  system.py
opsiconfd/utils/: __init__.py  cryptography.py  fastapi.py  modules.py  ucs.py  user.py
opsiconfd_data/: opsiconfd-pre-start  opsiconfd.conf  opsiconfd.service  postinst
opsiconfd_data/static/: index.html  log_viewer.html  opsiconfd.css
perftest/: README.md  bencher-command.py  file-download.py  messagebus-clients.py  opsiconfd-backend-perftest.py  opsiconfd-messagebus-terminal-perftest.py  opsiconfd-perftest.py  perf-test-webdav.py  webdav-perftest.py
perftest/tests/: test_base.json  test_jsonrpc_authenticated.json  test_jsonrpc_heavy_data.json  test_jsonrpc_heavy_data2.json  test_jsonrpc_log_write.json  test_jsonrpc_opsi_client.json  test_messagebus_jsonrpc_authenticated.json  test_messagebus_jsonrpc_opsi_client.json  test_opsi_configed_4_2_19_2_startup.json  test_session_loading.json  test_webdav.json  test_webdav_short.json  test_websocket_echo.json
rpm/: build_rpm.sh  create_source.sh  opsiconfd.spec
scripts/: clean-redis.py  devenv.sh  opsi-supervisor  opsiconfd  opsiconfd-guard  setup-grafana.sh  setup-hosts.sh  setup-mysql.sh  setup-redis.sh  setup.sh  update-db-schema.py
static/: log_viewer.html  opsiconfd.css
tests/: __init__.py  conftest.py  run_tests.sh  test_addon_manager.py  test_admininterface.py  test_app_status.py  test_app_utils.py  test_application.py  test_application_filetransfer.py  test_application_main.py  test_application_metrics.py  test_application_proxy.py  test_application_redisinterface.py  test_application_terminal.py  test_auth.py  test_authentication.py  test_backend.py  test_backend_auth.py  test_backend_mysql.py  test_backend_rpc.py  test_backend_rpc_cache.py  test_backend_rpc_extender.py  test_backend_rpc_host.py  test_backend_rpc_obj_config.py  test_backend_rpc_obj_host.py  test_backend_rpc_obj_product.py  test_backend_rpc_obj_product_dependency.py  test_backend_rpc_obj_product_on_client.py  test_backend_rpc_obj_product_on_depot.py  test_backup.py  test_check.py  test_config.py  test_dhcpd.py  test_diagnostic.py  test_grafana.py  test_jsonrpc.py  test_letsencrypt.py  test_logging.py  test_login.py  test_main.py  (+41 more)
tests/application/: test_redisinterface.py
tests/backend/: test_backend.py  test_backend_auth.py  test_backend_mysql.py  test_cleanup.py  test_transfer_slots.py  test_update_database.py
tests/check/: test_addon_check.py  test_backend_check.py  test_backup_check.py  test_check.py  test_config_check.py  test_jsonrpc_check.py  test_ldap_check.py  test_mysql_check.py  test_opsilicense_check.py  test_packages_check.py  test_redis_check.py  test_ssl_check.py  test_system_check.py  test_users_check.py
tests/data/: default-opsiconfd.conf  (+1 more)
(+248 files in other folders)
