[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "opsiconfd"
version = "4.2.0.319"
description = "opsi configuration service"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
include = [ "run-opsiconfd", "opsiconfd_data/**/*",]
[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 140
target-version = [ "py310",]
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-opsi = ">=4.2.0.327,<4.3"
python-opsi-common = ">=4.2.0.299,<4.3"
aiofiles = "^22.1"
aiohttp = "^3.7"
aiologger = "^0.7"
aioredis = "^2.0"
aiozeroconf = "^0.1"
configargparse = "^1.4"
distro = "^1.5"
dnspython = "^2.1"
fastapi = "^0.89"
guppy3 = "^3.1"
hiredis = "^2.0"
itsdangerous = "^2.0"
mysqlclient = "2.1.1"
objgraph = "^3.5"
orjson = "^3.6"
pympler = "^1.0"
python-magic = "^0.4"
python-multipart = "^0.0"
redis = "^4.1"
uvicorn = "^0.20"
uvloop = "^0.17"
websockets = "^10.1"
wsgidav = "^4.0"
yappi = "^1.3"
httpx = "^0.23.0"
rich = "^13.2.0"

[tool.poetry.scripts]
opsiconfd = "opsiconfd.__main__:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0"
hypothesis = "^6.32"
idna = "^3.3"
isort = "^5.10"
mock = "^5.0"
mypy = "^0.991"
perflint = "^0.7"
pyinstaller = "^5.2"
pylint = "^2.12"
pytest = "^7.1"
pytest-asyncio = "^0.20"
pytest-cov = "^4.0"
schemathesis = "^3.17"
tan = "^22.8"
types-certifi = "^2021.10"
types-psutil = "^5.8"
types-pyopenssl = "^23.0"
types-redis = "^4.1"
types-requests = "^2.27"
