[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "opsiconfd"
version = "4.3.18.3"
description = "opsi configuration service"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
include = [ "run-opsiconfd", "opsiconfd_data/**/*",]
[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"

[tool.ruff]
line-length = 140

[tool.poetry.scripts]
opsiconfd = "opsiconfd.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
a2wsgi = "^1.8"
aiofiles = "^23.1"
aiohttp = "^3.7"
aiologger = "^0.7"
aiozeroconf = "^0.1"
annotated-types = "^0.7"
click = "^8.1"
configargparse = "^1.4"
configupdater = "^3.1"
distro = "^1.5"
fastapi = "^0.111"
greenlet = "^3.0"
hiredis = "^2.2"
httpx = "^0.27"
itsdangerous = "^2.0"
msgspec = "^0.18"
mysqlclient = ">=2.0,<2.2"
netifaces = "^0.11"
objgraph = "^3.5"
py3dns = "^4.0"
pydantic = "^2.4"
pydantic-core = "^2.18"
pympler = "^1.0"
pymysql = "^1.1"
pyotp = "^2.8"
python-magic = "^0.4"
python-multipart = "^0.0"
python-opsi = ">=4.3.1,<4.4"
python-opsi-common = ">=4.3.3,<4.4"
python3-saml = "^1.16.0"
qrcode = "^7.4.2"
redis = "^5.0"
rich = "^13.0"
six = "^1.16"
starlette = "^0.37"
uvicorn = "^0.30"
uvloop = "^0.19"
websockets = "^12.0"
werkzeug = "^3.0"
wsgidav = "^4.3"
wsproto = "^1.2"
yappi = "^1.4"
python-opsi-system = "^4.3.1.1"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7"
dill = "^0.3"
hypothesis = "^6.32"
idna = "^3.3"
mock = "^5.0"
mypy = "^1.4"
pydevd = "^3.0"
pyinstaller = "^6.1"
pyinstaller-hooks-contrib = "^2024.0"
pytest = ">=7.0,<8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-retry = "^1.6"
ruff = "^0.4"
types-certifi = "^2021.10"
types-ldap3 = "^2.9"
types-psutil = "^5.8"
types-redis = "^4.1"
types-requests = "^2.27"
wrapt = "^1.14"
